# Clipboard-manager

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: categorizer.rs  clipboard_watcher.rs  commands.rs  crypto.rs  db.rs  error.rs  images.rs  lib.rs  ocr.rs  settings.rs  transforms.rs  tray.rs  win_clipboard.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/clipboard/: clips.rs  io.rs  mod.rs  tags.rs
src-tauri/src/commands/system/: mod.rs  settings.rs  shell.rs  stats.rs
src-tauri/src/commands/tools/: convert.rs  mod.rs  ports.rs  vectorize.rs
src-tauri/src/db/: clips.rs  groups.rs  mod.rs  tags.rs  tests.rs
src/components/: ClipCard.tsx  ClipList.tsx  CodeBlock.tsx  ConfirmDialog.tsx  GroupDetail.tsx  GroupPreview.tsx  ImagePreview.tsx  Onboarding.tsx  SearchBar.tsx  SelectionBar.tsx  Settings.tsx  Sidebar.tsx  TagPicker.tsx  Toaster.tsx  ToolCard.tsx  ToolsSection.test.ts  ToolsSection.tsx  TransformPicker.tsx  UpdateButton.tsx
src/hooks/: useBulkSelection.ts  useClipDnd.ts  useClipboardData.ts  useCopy.ts  useKeyboardNav.ts
src/lib/: api.ts  format.test.ts  format.ts  useExitAnimation.ts  useImageUrl.ts
src/test/: fixtures.ts  setup.ts
src/tools/: registry.ts  types.ts  useToolPrefs.ts
src/tools/base64-url/: Base64Url.tsx
src/tools/case-converter/: CaseConverter.tsx
src/tools/cron/: Cron.tsx
src/tools/env-json/: EnvJson.tsx  env.test.ts  env.ts
src/tools/fake-data/: FakeData.tsx
src/tools/generators/: Generators.tsx
src/tools/hash-compare/: HashCompare.tsx
src/tools/html-entities/: HtmlEntities.tsx
src/tools/image-converter/: ImageConverter.tsx
src/tools/json-formatter/: JsonFormatter.tsx
src/tools/jwt/: Jwt.tsx
src/tools/markdown/: Markdown.tsx
src/tools/number-base/: NumberBase.tsx
src/tools/port-killer/: PortKiller.tsx
src/tools/qrcode/: QrCode.tsx
src/tools/regex/: Regex.tsx
src/tools/shared/: OutputPane.tsx  Toggle.tsx  ToolButton.tsx  codec.ts  hash.ts  panels.ts  ui.ts
src/tools/slug/: Slug.tsx
src/tools/text-diff/: TextDiff.tsx
src/tools/timestamp/: Timestamp.tsx
src/tools/vectorial/: Vectorial.tsx
src/tools/yaml-json/: YamlJson.tsx
