[package]
name = "clipboard-manager"
version = "0.2.0"
description = "Local clipboard manager"
authors = ["Syqs19"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipboard_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
rusqlite = { version = "0.40.0", features = ["bundled-sqlcipher-vendored-openssl"] }
arboard = "3.6.1"
clipboard-master = "4.0.0"
regex = "1.12.3"
png = "0.18.1"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
fuzzy-matcher = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_DataExchange",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_Security_Cryptography",
] }

